--- a/docker/go/Dockerfile
+++ b/docker/go/Dockerfile
@@ -1,3 +1,4 @@
 FROM golang:1.17-alpine
 
-ENTRYPOINT go clean -modcache && go build cmd/main.go && tail -f /dev/null
+#ENTRYPOINT go clean -modcache && go run cmd/main.go && tail -f /dev/null
+ENTRYPOINT go clean -modcache && go run cmd/main.go
