--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3'
 
 services:
-  go:
-    container_name: go
-    env_file:
-      - .env
-    build: docker/go
-    working_dir: /go/src/tgsite
-    volumes:
-      - .:/go/src/tgsite
-    networks:
-      - app
-    depends_on:
-      - mongo
+#  go:
+#    container_name: go
+#    env_file:
+#      - .env
+#    build: docker/go
+#    working_dir: /go/src/tgsite
+#    volumes:
+#      - .:/go/src/tgsite
+#    networks:
+#      - app
+#    depends_on:
+#      - mongo
 
   migrate:
     build: docker/migrate
