--- a/docker/go/Dockerfile
+++ b/docker/go/Dockerfile
@@ -2,3 +2,5 @@ FROM golang:1.17-alpine
 
 #ENTRYPOINT go clean -modcache && go run cmd/main.go && tail -f /dev/null
 ENTRYPOINT go clean -modcache && go run cmd/main.go
+
+test
